# AdventOfCode2025

./: .gitignore  README.md  run.sh  run_go.sh  run_java.sh  run_python.sh  run_rust.sh  run_typescript.sh
day_1/: part_1.py  part_1.rs  part_2.py  part_2.rs
day_2/: part_1.py  part_1.rs  part_2.py  part_2.rs
day_3/: part_1.py  part_1.rs  part_2.py  part_2.rs
day_4/: part_1.rs  part_2.py  part_2.rs
day_5/: part_1.rs  part_2.rs
go/: go.mod
go/day_1/: part_1.go  part_2.go
go/day_10/: part_1.go  part_2.go
go/day_11/: part_1.go  part_2.go
go/day_12/: part_1.go
go/day_2/: part_1.go  part_2.go
go/day_3/: part_1.go  part_2.go
go/day_4/: part_1.go  part_2.go
go/day_5/: part_1.go  part_2.go
go/day_6/: part_1.go  part_2.go
go/day_7/: part_1.go  part_2.go
go/day_8/: part_1.go  part_2.go
go/day_9/: part_1.go  part_2.go
java/day_1/: Part1.java  Part2.java
java/day_10/: Part1.java  Part2.java
java/day_11/: Part1.java  Part2.java
java/day_12/: Part1.java
java/day_2/: Part1.java  Part2.java
java/day_3/: Part1.java  Part2.java
rust/: Cargo.toml
rust/day_1/: part_1.rs  part_2.rs
rust/day_10/: part_1.rs  part_2.rs
rust/day_11/: part_1.rs  part_2.rs
rust/day_12/: part_1.rs
rust/day_2/: part_1.rs  part_2.rs
rust/day_3/: part_1.rs  part_2.rs
rust/day_4/: part_1.rs  part_2.rs
rust/day_5/: part_1.rs  part_2.rs
rust/day_6/: part_1.rs  part_2.rs
rust/day_7/: part_1.rs  part_2.rs
rust/day_8/: part_1.rs  part_2.rs
rust/day_9/: part_1.rs  part_2.rs
typescript/: package-lock.json  package.json  tsconfig.json
(+56 files in other folders)
