[package]
name = "advent_of_code_2025"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day_1_part_1"
path = "day_1/part_1.rs"

[[bin]]
name = "day_1_part_2"
path = "day_1/part_2.rs"

[[bin]]
name = "day_2_part_1"
path = "day_2/part_1.rs"

[[bin]]
name = "day_2_part_2"
path = "day_2/part_2.rs"

[[bin]]
name = "day_3_part_1"
path = "day_3/part_1.rs"

[[bin]]
name = "day_3_part_2"
path = "day_3/part_2.rs"

[[bin]]
name = "day_4_part_1"
path = "day_4/part_1.rs"

[[bin]]
name = "day_4_part_2"
path = "day_4/part_2.rs"

[[bin]]
name = "day_5_part_1"
path = "day_5/part_1.rs"

[[bin]]
name = "day_5_part_2"
path = "day_5/part_2.rs"

[[bin]]
name = "day_6_part_1"
path = "day_6/part_1.rs"

[[bin]]
name = "day_6_part_2"
path = "day_6/part_2.rs"

[[bin]]
name = "day_7_part_1"
path = "day_7/part_1.rs"

[[bin]]
name = "day_7_part_2"
path = "day_7/part_2.rs"

[[bin]]
name = "day_8_part_1"
path = "day_8/part_1.rs"

[[bin]]
name = "day_8_part_2"
path = "day_8/part_2.rs"

[[bin]]
name = "day_9_part_1"
path = "day_9/part_1.rs"

[[bin]]
name = "day_9_part_2"
path = "day_9/part_2.rs"

[[bin]]
name = "day_10_part_1"
path = "day_10/part_1.rs"

[[bin]]
name = "day_10_part_2"
path = "day_10/part_2.rs"

[[bin]]
name = "day_11_part_1"
path = "day_11/part_1.rs"

[[bin]]
name = "day_11_part_2"
path = "day_11/part_2.rs"

[[bin]]
name = "day_12_part_1"
path = "day_12/part_1.rs"
